--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,7 @@ __marimo__/
 terraform.tfstate.d/
 *.tfstate
 *.tfstate.backup
+
+# Lambda deployment packages
+lambda_function.zip
+backend/lambda/lambda_function.zip
