--- a/backend/researcher/pyproject.toml
+++ b/backend/researcher/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "fastapi>=0.116.1",
     "httpx>=0.28.1",
     "openai-agents>=0.2.4",
+    "playwright>=1.54.0",
     "pydantic>=2.11.7",
     "python-dotenv>=1.1.1",
     "requests>=2.32.4",
