Add .env.backup to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -230,4 +230,4 @@ backend/**/*_lambda.zip
 
 # But do include the scheduler
 !backend/scheduler/lambda_function.zip
-!frontend/lib
+!frontend/lib.env.backup
