--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-# Alex Financial Planner - Environment Variables
+# SAGE (Strategic Agentic Generative Explainer) - Financial Planner
+# A multi-agent enterprise-grade SaaS financial planning platform
 # Copy this file to .env and fill in your actual values
 
 # ============================================================
@@ -14,15 +15,15 @@ DEFAULT_AWS_REGION=us-east-1
 # PART 2: SageMaker Endpoint
 # ============================================================
 # After deploying Part 2, add the endpoint name
-SAGEMAKER_ENDPOINT=alex-embedding-endpoint
+SAGEMAKER_ENDPOINT=sage-embedding-endpoint
 
 # ============================================================
 # PART 3: Ingestion Pipeline
 # ============================================================
 # After deploying Part 3, add these values
-VECTOR_BUCKET=alex-vectors-123456789012
-ALEX_API_ENDPOINT=https://xxxxxxxxxx.execute-api.us-east-1.amazonaws.com/prod/ingest
-ALEX_API_KEY=your-api-key-here
+VECTOR_BUCKET=sage-vectors-123456789012
+SAGE_API_ENDPOINT=https://xxxxxxxxxx.execute-api.us-east-1.amazonaws.com/prod/ingest
+SAGE_API_KEY=your-api-key-here
 
 # ============================================================
 # PART 4: Researcher Agent
@@ -34,8 +35,8 @@ OPENAI_API_KEY=sk-...
 # PART 5: Database
 # ============================================================
 # After deploying Part 5, add these values
-AURORA_CLUSTER_ARN=arn:aws:rds:us-east-1:123456789012:cluster:alex-aurora-cluster
-AURORA_SECRET_ARN=arn:aws:secretsmanager:us-east-1:123456789012:secret:alex-aurora-credentials-xxxxx
+AURORA_CLUSTER_ARN=arn:aws:rds:us-east-1:123456789012:cluster:sage-aurora-cluster
+AURORA_SECRET_ARN=arn:aws:secretsmanager:us-east-1:123456789012:secret:sage-aurora-credentials-xxxxx
 
 # ============================================================
 # PART 6: Agents
@@ -54,7 +55,7 @@ POLYGON_PLAN=free
 # ============================================================
 # The API uses database configuration from Part 5 above (AURORA_CLUSTER_ARN, AURORA_SECRET_ARN)
 # Optional: specify database name (defaults to "alex" if not set)
-AURORA_DATABASE=alex
+AURORA_DATABASE=sage
 
 # Clerk configuration for JWT validation
 CLERK_JWKS_URL=https://your-instance.clerk.accounts.dev/.well-known/jwks.json
