--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -3,7 +3,7 @@ name = "backend"
 version = "0.1.0"
 requires-python = ">=3.12"
 dependencies = [
-    "alex-database",
+    "sage-database",
     "boto3>=1.40.29",
     "langfuse>=3.3.4",
     "openai-agents>=0.3.0",
@@ -19,4 +19,4 @@ members = [
 ]
 
 [tool.uv.sources]
-alex-database = { workspace = true }
+sage-database = { workspace = true }
