--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Alex AI Financial Advisor",
-  "short_name": "Alex AI",
+  "name": "Sage AI Financial Advisor",
+  "short_name": "Sage AI",
   "description": "AI-powered financial planning and portfolio management",
   "theme_color": "#209DD7",
   "background_color": "#ffffff",
